# Algorithm-Chooser

./: README.md  frontend.py  pyproject.toml
src/algo_chooser/: algorithm_summaries.py
src/algo_chooser/algorithm_summaries/: bandit-algorithms.md  causal_modelling.md  classical-time-series-forecasting.md  clustering.md  experimental_design.md  generative-ai-agents.md  operations-research.md  robotic_process_automation.md  supervised_learning.md
src/algo_chooser/docs/vibe_coding/: algorithm_summary_generation.md
src/algo_chooser/frontend/: text.py
src/algo_chooser/llm/: client.py  prompts.py
src/algo_chooser/llm/tasks/: assess_alg_to_solve_business_problem.py
