[project]
name = "algo-chooser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=1.70.0",
    "pydantic>=2.11.2",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "ruff>=0.11.4",
]
